--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
         <canvas width="320" height="240"></canvas>
         <a id="button" href="#">Send!</a>
         <h1 id="emotion">None so far :(</h1>
+        <!-- nothing here -->
     </body>
 </html>
