--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Testing the thing</title>
-        <!--<link href="style.css" type="text/css" rel="stylesheet">-->
+        <link href="style.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script>
             $('document').ready(function(e){
