--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 video = document.querySelector('video');
 
                 var responses = {anger: "Haha, look at them getting annoyed. Wonder if I could push it further?",
-                                 contempt: "Hell, why am I even talking to this person?",
+                                 contempt: "I really need to find better people to talk to.",
                                  disgust: "I think I have to puke.",
                                  fear: "My god this person is scary. Wouldn't want to see them around kids...",
                                  happiness: "Haha, this is great. I like talking to stupid people",
