--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Testing the thing</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
+        <meta name="mobile-web-app-capable" content="yes">
         <link href="style.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script>
