--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 }
 
 
-                // Not showing vendor prefixes. asdjhasdkjh
+                // Not showing vendor prefixes. asdjhasdkjhasd
                 navigator.getUserMedia({video: true, audio: true}, function(localMediaStream) {
                     video.src = window.URL.createObjectURL(localMediaStream);
 
