--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 });
 
                 var timer = function(e){
-                    send();
+                    setTimeout(send, 3000);
                 }
                 timer();
 
