--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         </script>
     </head>
     <body>
-        <video width="100%" autoplay></video>
-        <canvas width="320" height="240"></canvas>
+        <video autoplay></video>
+        <canvas></canvas>
         <a id="button" href="#">Send!</a>
         <h1 id="emotion">None so far :(</h1>
         <img src="loading-gif.gif" alt="loading">
