full screen attempt

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script>
+            document.documentElement.requestFullscreen();
             $('document').ready(function(e){
                 var width = 320;
                 var height = 160;
