full screen test 2

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
         <meta name="mobile-web-app-capable" content="yes">
         <link href="style.css" type="text/css" rel="stylesheet">
+        <link rel="manifest" href="/manifest.json">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script>
-            document.documentElement.requestFullscreen();
             $('document').ready(function(e){
                 var width = 320;
                 var height = 160;
