remove text while processing

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     });
 
                     gif.addClass("visible");
-
+                    $('#emotion').html("");
 
                     var xhr = new XMLHttpRequest();
                     xhr.onload = function(e) {
