--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                     });
                 }
 
+                loadCamera();
+
                 //snippet to convert to binary
                 var toBinary = function(canvas) {
                     var base64 = canvas.toDataURL('image/png'),
