--- a/index.html
+++ b/index.html
@@ -26,40 +26,61 @@
                 var insertName = "you";
                 var responses = {anger: 	[	"Haha, look at " + insertName + " getting annoyed. Wonder if I could push it further?",
 				                                insertName + ", going red in the face. Boring.",
-				                                "Frowning really isn't a good look for " + insertName
+				                                "Frowning really isn't a good look for " + insertName,
+				                                "You're mad? not surprising.",
+                                                "How hard would it be for you to not look pissed all the time?",
+                                                "Is this just resting bitch face or actual anger?",
+                                                "I hate looking ast frowny faces. Cheer up!"
 				                            ],
 
 
                                 contempt: 	[	"Typical " + insertName + ", always think you're above me",
 				                                "ooooooh sorry " + insertName + ", I am NOT worthy",
-				                                "The feeling is mutual"
+				                                "The feeling is mutual, I don't want to be here either.",
                                             ],
 
 
                                 disgust: 	[ 	"Whats wrong " + insertName + ", do I disgust you?",
-                                				insertName + ", we've only just begun",
-                                				"Meh, I've done worse"
+                                				insertName + ", don't look so offended.",
+                                				"What did I do to make you feel that way? Overreacting much?",
+                                                "Wow, that's very negative...",
+                                                "Did I cause that face? That's so sad."
                                             ],
 
                                 fear: 		[ 	insertName + ", it's ok, don't worry. I only know eveything.",
-                                				"My god this person is scary. Wouldn't want to see them around kids...",
-                                				insertName + ", it'll be over soon..."
+                                				"Do I really look that scary? Or is this person just a pussy?",
+                                				insertName + ", it'll be over soon...",
+                                                "That's weird... You almost look scared...",
+                                                "Huh... if this is making you fear me, you should know what I really think about.",
+                                                "I must look scary. BOOH!"
                                             ],
 
                                 happiness: 	[	"Oh man, " + insertName + "'s smile makes me feel unwell",
                                 				"It's easy to smile " + insertName + " when you're oblvious to the world",
-                                				"Oh to be as blindly happy as " + insertName + ", what a world"
+                                				"Oh to be as blindly happy as " + insertName + ", what a world",
+                                                "What a beautiful smile. Not.",
+                                                "Funny, they're smiling. I'll smile back to pretend I like you.",
+                                                "Oh... You're smiling... That's not the response I had in mind.",
+                                                "Can we just be a little bit less happy?",
+                                                "That smile is just making me feel worse.",
+                                                "You're smiling... Is that supposed to make me feel better?"
                                             ],
 
                                 neutral: 	[	"This is awfully boring. Wonder if there's anyone else to talk to...",
-                                				insertName + ", you again... like blood from a stone",
+                                				"You again... like blood from a stone",
                                 				"Ok it's " + insertName + ", smile and pretend you're listenig"
                                             ],
 
 
                                 sadness: 	[	"This conversation is just making me depressed.",
                                 				"Don't be down, for " + insertName + " the only possible way is up",
-                                				"I should just end " + insertName + " now and do us all a favour"
+                                				"I should just end " + insertName + " now and do us all a favour",
+                                                "Why are you looking sad? Did I offend you, you cry baby?",
+                                                "Get that grumpy face out of my sight.",
+                                                "Turn that frown upside down. Or not. I don't care",
+                                                "At least TRY to look happy when you talk to me...",
+                                                "You're sad? That's making me sad. Please go away.",
+                                                "Why are you frowning? Am I causing this? Just leave me alone if you don't want to talk..."
                                             ],
 
                                 surprise: 	[	insertName + "!!, stop gaping",
